tests/snapshots/errors/asm_invalid_instruction.mc
// Test invalid asm instruction name
asm {
    __emit("InvalidOp");
};
